opam-version: "2.0"
homepage:     "https://github.com/mirleft/ocaml-nocrypto"
dev-repo:     "git+https://github.com/mirleft/ocaml-nocrypto.git"
bug-reports:  "https://github.com/mirleft/ocaml-nocrypto/issues"
doc:          "https://mirleft.github.io/ocaml-nocrypto/doc"
authors:      ["David Kaloper <dk505@cam.ac.uk>"]
maintainer:   "David Kaloper <dk505@cam.ac.uk>"
license:      "ISC"
synopsis:     "Simple crypto for the modern age"

build: [ ["dune" "subst"] {pinned}
         ["dune" "build" "-p" name "-j" jobs ]
         ["dune" "runtest"] {with-test} ]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.7"}
  "dune-configurator" {build}
  "cpuid" {build}
  "ounit" {with-test}
  "cstruct" {>="3.0.0"}
  "ocplib-endian"
  "zarith"
  ("mirage-no-xen" | ("mirage-xen" & "zarith-xen"))
  ("mirage-no-solo5" | ("mirage-solo5" & "zarith-freestanding"))
]

depopts: [ "unix" "lwt" "mirage-entropy" ]

conflicts: [ "mirage-xen" {< "2.2.0"} ]
